Update G1GCAnalysis.md